--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,18 @@
 services:
   - type: web
     name: rag-web-svc-backend
-    runtime: python
+    env: python
     region: oregon
     plan: free
     buildCommand: "pip install -r requirements_deploy.txt"
     startCommand: "uvicorn enhanced_rag_chatbot:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: "3.11"
       - key: OPENAI_API_KEY
         sync: false # Must be set manually in Render dashboard
       - key: ALLOWED_ORIGINS
         value: https://humanist96.github.io
+      - key: RENDER
+        value: "true"
     autoDeploy: true
