--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,17 @@
-# Render.com deployment configuration
 services:
   - type: web
     name: rag-web-svc-backend
     env: python
-    region: oregon
     plan: free
-    buildCommand: "pip install -r requirements_deploy.txt"
-    startCommand: "uvicorn enhanced_rag_chatbot:app --host 0.0.0.0 --port $PORT"
+    branch: master
+    buildCommand: "python -m pip install -r requirements.txt"
+    startCommand: "python -m uvicorn enhanced_rag_chatbot:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
       - key: OPENAI_API_KEY
-        sync: false # Must be set manually in Render dashboard
+        sync: false
       - key: ALLOWED_ORIGINS
-        value: https://humanist96.github.io
+        value: "https://humanist96.github.io"
       - key: RENDER
         value: "true"
-    autoDeploy: true
