--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     branch: master
-    buildCommand: "python -m pip install -r requirements.txt"
+    buildCommand: "python -m pip install --upgrade pip && python -m pip install -r requirements_minimal.txt"
     startCommand: "python -m uvicorn enhanced_rag_chatbot:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
